tests/feature_tests/error_extra_tokens.c
int main() {
  return 0;
  // error: unexpected token at 'a'
} a;
